# Disciplr-backend

./: .env.example  .gitleaks.toml  COMMIT_MESSAGE.md  CONCURRENCY_TESTS_IMPLEMENTATION.md  DEAD_LETTER_FINAL_SUMMARY.md  DEAD_LETTER_INDEX.md  DEAD_LETTER_QUEUE_IMPLEMENTATION.md  DEAD_LETTER_QUICK_REFERENCE.md  DEAD_LETTER_VERIFICATION_REPORT.md  Dockerfile  MULTI_VERIFIER_IMPLEMENTATION.md  PERFORMANCE_TESTS_README.md  PRIVACY.md  QUICK_START_MULTI_VERIFIER.md  README.md  TODO-milestone-admin-verifier-lifecycle.md  TODO.md  consolidate_auth.py  docker-compose.yml  eslint.config.js  inspect_auth.py  issue-452.md  issue-478.md  jest.config.cjs  merge_fix.py  package-lock.json  package.json  patch.py  patch3.py  patch4.py  pnpm-lock.yaml  stellarSdkRegression.test.ts  vaults_test_output_utf8.txt
contracts/accountability_vault/: Cargo.toml  Makefile  patch2.py
contracts/accountability_vault/fuzz/: Cargo.toml
contracts/accountability_vault/fuzz/fuzz_targets/: create_vault.rs
contracts/accountability_vault/scripts/: check_snapshots.sh
contracts/accountability_vault/spec/: AccountabilityVault.spec.json
contracts/accountability_vault/src/: lib.rs  test.rs
contracts/accountability_vault/test_snapshots/test/: test_check_in_after_slash_fails.1.json  test_check_in_and_claim_success.1.json  test_claim_before_all_verified_fails.1.json  test_create_and_stake.1.json  test_double_slash_after_miss_fails.1.json  test_extend_deadline_after_deadline_passed_fails.1.json  test_extend_deadline_milestone_exceeds_new_end_fails.1.json  test_extend_deadline_not_greater_than_current_fails.1.json  test_extend_deadline_on_draft_fails.1.json  test_extend_deadline_success.1.json  test_extend_deadline_wrong_creator_fails.1.json  test_extend_deadline_wrong_verifier_fails.1.json  test_gas_benchmarks_10_milestones.1.json  test_gas_benchmarks_slash_on_miss_10_milestones.1.json  test_migration_is_idempotent.1.json  test_milestone_fields_preserved_after_migration.1.json  test_multiple_vaults.1.json  (+18 more)
(+395 files in other folders)
