[package]
name = "accountability_vault"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "0.10.0"
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Expose testutils as an optional feature so the fuzz crate can enable it
# without making it a mandatory dependency of the main library.
[features]
testutils = ["soroban-sdk/testutils"]

[lints]
workspace = true

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
codegen-units = 1
