[package]
name = "accountability-vault-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4.7", features = ["arbitrary-derive"] }
arbitrary = { version = "1.3.2", features = ["derive"] }

[dependencies.accountability_vault]
path = ".."
features = ["testutils"]

# soroban testutils requires std; enable them so the fuzz binary can use Env.
[dependencies.soroban-sdk]
version = "21.0.0"
features = ["testutils"]

[[bin]]
name = "create_vault"
path = "fuzz_targets/create_vault.rs"
test = false
doc = false

[profile.release]
opt-level = 3
overflow-checks = true
lto = "thin"
